fix dcf Copywriting (#5)

--- a/locales/en.json
+++ b/locales/en.json
@@ -16,7 +16,7 @@
   "description": {
     "program": {
       "title": "Decentralized Cloud Foundation Initiatives",
-      "content": "DCF has been funding the decentralized cloud storage project Crust Network since 2018, and will extend the effort to provide both financial and non? financial support to more projects and teams that drive technical innovation."
+      "content": "DCF has been funding the decentralized cloud storage project Crust Network since 2018, and will extend the effort to provide both financial and non-financial support to more projects and teams that drive technical innovation."
     },
     "stack": {
       "title": "Decentralized Cloud Storage Technologies",
